# dns-update

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  tool
.github/workflows/: test.yml
examples/: README.md  desec.rs  spaceship.rs
src/: bind.rs  crypto.rs  http.rs  jwt.rs  lib.rs  update.rs  utils.rs
src/providers/: bunny.rs  cloudflare.rs  desec.rs  digitalocean.rs  dnsimple.rs  gandi.rs  google_cloud_dns.rs  in_memory.rs  linode.rs  mod.rs  ovh.rs  pebble.rs  porkbun.rs  rfc2136.rs  route53.rs  spaceship.rs
src/tests/: bunny_test.rs  desec_tests.rs  dnsimple_tests.rs  google_cloud_dns_tests.rs  lib_tests.rs  linode_tests.rs  mod.rs  ovh_tests.rs  porkbun_tests.rs  route53_tests.rs  spaceship_tests.rs
