[package]
name = "dns-update"
description = "Dynamic DNS update (RFC 2136 and cloud) library for Rust"
version = "0.1.5"
edition = "2021"
authors = [ "Stalwart Labs <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/dns-update"
homepage = "https://github.com/stalwartlabs/dns-update"
keywords = ["dns", "update", "rfc2136", "dynamic"]
categories = ["network-programming"]
readme = "README.md"
resolver = "2"

[dependencies]
tokio = { version = "1.47", features = ["rt", "net"] }
# FIXME: Stalwart has hickory-resolver at 0.26.0-alpha.1, which is causing two versions of hickory-proto to be bundled.
#  hickory-client is stuck at version 0.24 due to src/providers/rfc2136.rs. I gave it my best attempt to figure out an
#  upgrade path for the code in rfc2136.rs and gave up after a few hours. A third of the hickory-client APIs it uses are
#  completely renamed and a third have been completely unimplemented across all of hickory-client. I don't think rfc2136.rs
#  can be salved; it needs a from-scratch rewrite.
hickory-client = { version = "= 0.24", features = ["dns-over-rustls", "dnssec-ring", "dns-over-https-rustls"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "http2"]}
serde_urlencoded = "0.7.1"
sha1 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1.2"
