[package]
name = "dns-update"
description = "Dynamic DNS update (RFC 2136 and cloud) library for Rust"
version = "0.2.0"
edition = "2024"
authors = [ "Stalwart Labs <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/dns-update"
homepage = "https://github.com/stalwartlabs/dns-update"
keywords = ["dns", "update", "rfc2136", "dynamic"]
categories = ["network-programming"]
readme = "README.md"
resolver = "2"

[features]
default = ["ring"]
ring = [
    "hickory-client/dnssec-ring",
    "hickory-client/tls-ring",
    "hickory-client/https-ring",
    "dep:ring",
    "reqwest/native-tls",
    "rustls",
    "rustls/ring",
]
aws-lc-rs = [
    "hickory-client/dnssec-aws-lc-rs",
    "hickory-client/tls-aws-lc-rs",
    "hickory-client/https-aws-lc-rs",
    "dep:aws-lc-rs",
    "reqwest/rustls",
    "rustls",
    "rustls/aws-lc-rs",
]

[dependencies]
tokio = { version = "1", features = ["rt", "net"] }
hickory-client = { version = "0.25", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.116", default-features = false, features = ["std"] }
reqwest = { version = "0.13", default-features = false, features = ["http2", "gzip", "deflate"]}
serde_urlencoded = { version = "0.7.1", default-features = false }
ring = { version = "0.17", optional = true }
aws-lc-rs = { version = "1.16", optional = true }
rustls = { version = "0.23", default-features = false, optional = true }
quick-xml = { version = "0.36", features = ["serialize"] }
chrono = { version = "0.4" , default-features = false, features = ["std", "clock", "now"] }
hex = { version = "0.4" , default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = { version = "1.6" }
httpmock = { version = "0.8", features = ["https"] }
